syntax = "proto3";

package game;
option go_package = "/quic";


message JoinRoomReq {
    int64 room_id = 1;
    int64 player_id = 3;
    int32 max_player = 4;
    string room_name = 5;
    string player_name = 6;
}

message JoinRoomResp {
}


